# efficient-programs-pr-2025w

./: .gitignore  README.md
C/: Makefile  README.md  bench.txt  benchmark.c  benchmark.py  benchmark_csv.c  main.c  performance_analysis.txt  plot_bench.py  single_entrypoint.c  sudoku.c  sudoku.h  sudoku_optimized_v0.c  sudoku_optimized_v0.h  sudoku_optimized_v1.c  sudoku_optimized_v1.h  sudoku_optimized_v2.c  sudoku_optimized_v2.h  sudoku_optimized_v3.c  sudoku_optimized_v3.h  sudoku_optimized_v4.c  sudoku_optimized_v4.h  sudoku_optimized_v5.c  sudoku_optimized_v5.h  sudoku_original.c  sudoku_unoptimized.c  sudoku_unoptimized.h  test.c
C++/: .gitignore  bench_unopt  benchmark.cpp  benchmark.py  benchmark_results.csv  bitmasking_results.txt  main.cpp  makefile  readme.md  sudoku_unoptimize.cpp  sudoku_unoptimize.hpp
C++/benchmarks/: results_bitmaskingrmv.txt  results_bitmaskingrmvfc.txt  results_dlx  results_unoptimized.txt
C++/bitmaskingrmv/: readme.md  sudoku_bitmasking_rmv.cpp  (+1 more)
boards/: fully-solved.sudoku  invalid-box-collision.sudoku  invalid-characters.sudoku  invalid-col-collision.sudoku  invalid-row-col-collision.sudoku  invalid-row-collision.sudoku  solvable-2x-hard.sudoku  solvable-easy-1.sudoku  solvable-example-1.sudoku  solvable-extra-hard-1.sudoku  solvable-hard-1.sudoku  solvable-medium-1.sudoku
haskell/: Makefile  solver.hs
haskell/optimized-v2/: notes.txt  solver.cabal  solver.hs
python/: README.md  benchmark.py  benchmark_results.csv  plot_graph_from_results.py
rust/: Cargo.toml  README.md
rust/benches/: benchmarks.rs
rust/data/: benchmark_results.csv  benchmark_results_raw_syscalls_flag.csv
rust/data/full_runs/: solve_basic.txt  solve_basic_std_index.txt  solve_basic_std_index_unchecked_indexing.txt  solve_bit_masking_v1.txt  solve_bit_masking_v1_skip_intermediate_stack_frames.txt  solve_bit_masking_v1_skip_intermediate_stack_frames_unchecked_indexing.txt  solve_bit_masking_v1_unchecked_indexing.txt  solve_bit_masking_v2.txt  solve_bit_masking_v2_skip_intermediate_stack_frames.txt  solve_bit_masking_v2_skip_intermediate_stack_frames_unchecked_indexing.txt  solve_bit_masking_v2_unchecked_indexing.txt  solve_bit_masking_v3.txt  solve_bit_masking_v3_constraint_solve_full_sort.txt  solve_bit_masking_v3_constraint_solve_full_sort_unchecked_indexing.txt  solve_bit_masking_v3_constraint_solve_minimal_sort.txt  solve_bit_masking_v3_constraint_solve_minimal_sort_unchecked_indexing.txt  solve_bit_masking_v3_unchecked_indexing.txt  solve_bit_masking_v4.txt  solve_bit_masking_v4_unchecked_indexing.txt  solve_bitset_masking_v1.txt  solve_bitset_masking_v1_unchecked_indexing.txt
rust/data/solver_only/: solve_basic.txt  solve_basic_std_index.txt  solve_basic_std_index_unchecked_indexing.txt  solve_bit_masking_v1.txt  solve_bit_masking_v1_skip_intermediate_stack_frames.txt  solve_bit_masking_v1_skip_intermediate_stack_frames_unchecked_indexing.txt  solve_bit_masking_v1_unchecked_indexing.txt  solve_bit_masking_v2.txt  solve_bit_masking_v2_skip_intermediate_stack_frames.txt  solve_bit_masking_v2_skip_intermediate_stack_frames_unchecked_indexing.txt  solve_bit_masking_v2_unchecked_indexing.txt  solve_bit_masking_v3.txt  solve_bit_masking_v3_constraint_solve_full_sort.txt  solve_bit_masking_v3_constraint_solve_full_sort_unchecked_indexing.txt  solve_bit_masking_v3_constraint_solve_minimal_sort.txt  solve_bit_masking_v3_constraint_solve_minimal_sort_unchecked_indexing.txt  solve_bit_masking_v3_unchecked_indexing.txt  solve_bit_masking_v4.txt  solve_bit_masking_v4_unchecked_indexing.txt  solve_bitset_masking_v1.txt  solve_bitset_masking_v1_unchecked_indexing.txt
rust/extra_boards/: 2x_hard.sudoku  easy.sudoku  extra_hard.sudoku  extra_hard2.txt  hard.sudoku  medium.sudoku
rust/scripts/: benchmark.py  build-all-feature-binaries.sh  clean-feature-binaries.sh  generate-saved-benchmarks.sh  plot_graph_from_results.py  test-all-features.sh
rust/src/: lib.rs  main.rs
rust/src/basic/: mod.rs
rust/src/basic_std_index/: mod.rs
rust/src/bit_masking_v1/: mod.rs
rust/src/bit_masking_v2/: mod.rs
rust/src/bit_masking_v3/: mod.rs  safe_solution.rs  unsafe_solution.rs
rust/src/bit_masking_v4/: mod.rs  safe_solution.rs  unsafe_solution.rs
rust/src/bitset_masking_v1/: mod.rs
rust/src/grid_bit_masking/: mod.rs
rust/src/grid_bit_masking_bitset/: mod.rs
scripts/: measure.sh
(+39 files in other folders)
