[package]
name = "sudoku-solver"
version = "0.1.0"
edition = "2024"

[features]
default = ["solve_bit_masking_v3_pq"]
solve_basic = []
solve_basic_std_index = []
solve_bit_masking_v1 = []
solve_bit_masking_v2 = []
solve_bit_masking_v3 = []
solve_bit_masking_v3_pq = ["solve_bit_masking_v3", "priority_queue"]
solve_bit_masking_v3_pq_ui = ["solve_bit_masking_v3", "priority_queue", "unchecked_indexing"]
solve_bitset_masking_v1 = []
measure_runtime = []
priority_queue = []
unchecked_indexing = []
best_swap = []

[dev-dependencies]
criterion = "0.7.0"

[dependencies]

[[bench]]
name = "benchmarks"
harness = false

[profile.test]
# Needed because solve_bit_masking_v3 relies on this,
# which is not set in the release mode
overflow-checks = false

[profile.release]
codegen-units = 1
debug = "none"
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = false
panic = "abort"
rpath = false
split-debuginfo = "off"
strip = "symbols"