cabal-version:      2.4
name:               sudoku-solver
version:            0.1.0.0
build-type:         Simple

executable sudoku-solver
  main-is:          solver.hs
  hs-source-dirs:   .
  default-language: Haskell2010
  ghc-options:      -O2 -Wall
  build-depends:
      base >=4.14 && <5,
      criterion,
      vector,
      array


